data/derived/sp14/progs/unify/prog1388.ml.out
Characters 263-296:
  | Thresh  (x,y,z,w) -> Printf.sprintf("%s<%s?%s:") x,y,z;;
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type string
